feat: add querey codigo in listarLicencas
