# docs/swagger.json
@@ -184,7 +184,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Retorna todas as licenças cadastradas ou filtra por código da compra.",
+                "description": "Retorna todas as licenças cadastradas ou filtra por código da compra e/ou código da licença.",
                 "produces": [
                     "application/json"
                 ],
@@ -197,6 +197,12 @@
                         "type": "string",
                         "description": "Código da compra para filtrar",
                         "name": "codigo_compra",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Código da licença para filtrar",
+                        "name": "codigo",
                         "in": "query"
                     }
                 ],
